--- a/frontend/index.html
+++ b/frontend/index.html
@@ -144,6 +144,51 @@
     </div>
 </section>
 
+<section class="sessao-projetos">
+<div class="sessao-header">
+    <h1>Projetos</h1>
+</div>
+<div class="projetos">
+    <div class="card">
+    <div class="card-img-wrapper">
+        <img src="image/proj1.jpg" alt="imagem do projeto todo">
+    </div>
+    <div class="card-info">
+        <h2>ToDo List</h2>
+        <h3>Javascript</h3>
+        <p>O Gerador de Texto Lorem Ipsum pode ser utilizado para você que está desenvolvendo seu projeto e 
+            precisa de texto aleatório aleatório.
+        </p>
+        <button>Saiba Mais</button>
+    </div>
+    </div>
+    <div class="card">
+    <div class="card-img-wrapper">
+    <img src="image/proj2.jpg" alt="Imagem do projeto Maratona">
+</div>
+    <div class="card-info">
+        <h2>Maratona</h2>
+        <h3>HTML, CSS</h3>
+        <p>O Gerador de Texto Lorem Ipsum pode ser utilizado para você que está desenvolvendo seu projeto e 
+            precisa de texto aleatório aleatório.</p>
+        <button>Saiba Mais</button>
+    </div>
+    </div>
+    <div class="card">
+    <div class="card-img-wrapper">
+    <img src="image/proj3.jpg" alt="imagem do projeto casa bela">
+    </div>
+        <div class="card-info">
+            <h2>Casa Bela</h2>
+            <h3>HTML</h3>
+            <p>O Gerador de Texto Lorem Ipsum pode ser utilizado para você que está desenvolvendo seu projeto e 
+            precisa de texto aleatório aleatório.</p>
+            <button>Saiba Mais</button>
+        </div>
+    </div>
+</div>
+</section>
+
 </div>
 </body>
 <script src="SideBar/index.js"></script>
