--- a/frontend/index.html
+++ b/frontend/index.html
@@ -159,7 +159,7 @@
         <p>O Gerador de Texto Lorem Ipsum pode ser utilizado para você que está desenvolvendo seu projeto e 
             precisa de texto aleatório aleatório.
         </p>
-        <button>Saiba Mais</button>
+        <button class="btn">Saiba Mais</button>
     </div>
     </div>
     <div class="card">
@@ -171,7 +171,7 @@
         <h3>HTML, CSS</h3>
         <p>O Gerador de Texto Lorem Ipsum pode ser utilizado para você que está desenvolvendo seu projeto e 
             precisa de texto aleatório aleatório.</p>
-        <button>Saiba Mais</button>
+        <button class="btn">Saiba Mais</button>
     </div>
     </div>
     <div class="card">
@@ -183,12 +183,35 @@
             <h3>HTML</h3>
             <p>O Gerador de Texto Lorem Ipsum pode ser utilizado para você que está desenvolvendo seu projeto e 
             precisa de texto aleatório aleatório.</p>
-            <button>Saiba Mais</button>
+            <button class="btn">Saiba Mais</button>
         </div>
     </div>
 </div>
 </section>
 
+<section class="sessao-contato">
+    <div class="contato-wrapper">
+        <div class="contato-left">        </div>
+        <div class="contato-right">
+            <h1>Contato</h1>
+            <form>
+                <div class="input-group">
+                    <input type="text" class="field" id="nome">
+                    <label for="nome" class="field-label">Nome</label>
+                </div>
+                <div class="input-group">
+                    <input type="text" class="field" id="nome">
+                    <label for="email" class="field-label">Email</label>
+                </div>
+                <div class="input-group">
+                    <textarea class="field" id="mensagem"></textarea>
+                    <label for="mensagem" class="field-label">Mensagem</label>
+                </div>
+                <button type="submit" class="btn btn-submit">Enviar</button>
+            </form>
+         </div>
+    </div>
+</section>
 </div>
 </body>
 <script src="SideBar/index.js"></script>
