--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,7 @@
             <span>fechar</span>
         </div>
 
-    <header>
+    <header id="home">
         <div class="img-wrapper">
             <img src="image/fotis-fotopoulos-LJ9KY8pIH3E-unsplash (1).jpg" alt="">
         </div>
@@ -37,10 +37,10 @@
         <nave>
             <ul class="menu">
                 <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
-                <li class="menu-item"><a href="#" class="menu-link">Conhecimento</a></li>
-                <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
-                <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
-                <li class="menu-item"><a href="#" class="menu-link">Orçamento</a></li>                
+                <li class="menu-item"><a href="#conhecimentos" class="menu-link">Conhecimento</a></li>
+                <li class="menu-item"><a href="#projetos" class="menu-link">Projetos</a></li>
+                <li class="menu-item"><a href="#contato" class="menu-link">Contato</a></li>
+                <li class="menu-item"><a href="#orcamento" class="menu-link">Orçamento</a></li>                
             </ul>
         </nave>
         <div class="social-media">
@@ -53,7 +53,7 @@
         
 
 </div>
-<section class="sessao-conhecimento">
+<section class="sessao-conhecimento" id="conhecimentos">
     <div class="sessao-header">
         <h1>Conhecimentos</h1>
     </div>
@@ -144,7 +144,7 @@
     </div>
 </section>
 
-<section class="sessao-projetos">
+<section class="sessao-projetos" id="projetos">
 <div class="sessao-header">
     <h1>Projetos</h1>
 </div>
@@ -189,7 +189,7 @@
 </div>
 </section>
 
-<section class="sessao-contato">
+<section class="sessao-contato" id="contato">
     <div class="contato-wrapper">
         <div class="contato-left">        </div>
         <div class="contato-right">
@@ -213,7 +213,7 @@
     </div>
 </section>
 
-<section class="sessao-orcamento">
+<section class="sessao-orcamento" id="orcamento">
     <div class="orcamento-wrapper">
         <h1>faça um orçamento</h1>
         <form>
@@ -238,6 +238,24 @@
         </form>
     </div>
 </section>
+
+<footer>
+    <div class="footer-content">
+        <p>
+            Copyright &copy; 2020, ETECIA DS - Todos os direitos reservados 
+        </p>
+        <div class="social-list">
+            <ul>
+                <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                <li><a href=""><i class="fab fa-twitter"></i></a></li>
+              </ul>
+        </div>
+    </div>
+</footer>
+<a href="#home" id="link-topo">
+    <i class="fas fa-arrow-up"></i>
+</a>
 
 </div>
 </body>
